# TokenMeter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  SPEC.md  TODO.md  add_anthropic_test.py  alembic.ini  build_anthropic_fixture.py  check_version.py  docker-compose.yml  opencode.json  postgres_log.txt  pyproject.toml  report.html  run_migration.py  speed_test.py.bak  test_dialect.py  token_speed.db.bak  verify_pg.py
.github/workflows/: ci.yml
backend/: auth.py  cli.py  config.py  database.py  main.py  models.py  schemas.py  seed_data.py  seed_heavy.py
backend/alembic/: env.py  migrations_helper.py
backend/alembic/versions/: 2f9c1045e7d7_initial_schema.py  9b9d8c7e6f5a_add_indexes_for_results_and_plans.py
backend/migrations/: 20260430_add_input_tokens_cache_read_char_count_density.sql  manager.py
backend/models/: __init__.py
backend/routes/: plans.py  public.py  results.py  settings.py
backend/services/: scheduler.py  speed_test.py  speed_test.py_tmp_parse_line
backend/tests/: conftest.py  test_auth.py  test_convert_to_suites.py  test_inheritance_api.py  test_matrix.py  test_migration_integration.py  test_models.py  test_plan_validation.py  test_plans.py  test_public.py  test_public_matrix.py  test_public_time_bucket.py  test_results.py  test_scheduler.py  test_security_regressions.py  test_settings.py  test_speed_test.py  test_stream_parser.py  test_trigger_test.py
backend/tests/fixtures/: minimax_m25_anthropic.json  minimax_m25_thinking.json
docs/: logging-issue-analysis.md
docs/superpowers/plans/: 2025-05-01-config-inheritance.md  2025-05-04-auto-theme.md  2025-05-14-modify-tokenplan-model.md  2026-04-30-db-migration-and-plan-transfer.md  2026-04-30-multi-platform-docker-ci.md  2026-04-30-speed-test-refactor.md  2026-05-01-auth-test-expansion.md  2026-05-01-delete-result.md  2026-05-01-thinking-isolation.md  2026-05-02-batch-plan-management.md  (+9 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+44 files in other folders)
