[project]
name = "token-speed-test"
version = "0.1.0"
description = "LLM API speed testing tool - measure TTFT and TPS across providers"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=backend --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["backend"]
concurrency = ["greenlet", "thread"]
omit = [
    "backend/cli.py",
    "backend/seed_data.py",
    "backend/migrations/*",
    "backend/tests/*",
]

[tool.coverage.report]
show_missing = true
